get smart about changed charts
Signed-off-by: Jeff Billimek <jeff@billimek.com>

--- a/helm-gh-pages/Dockerfile
+++ b/helm-gh-pages/Dockerfile
@@ -9,6 +9,7 @@ LABEL "com.github.actions.color"="green"
 LABEL "com.github.actions.name"="Helm Chart Test"
 LABEL "com.github.actions.description"="This is an Action to lint, package, and publish Helm charts to GitHub Pages."
 
+RUN apk add jq
 
 COPY entrypoint.sh /entrypoint.sh
 
